--- a/frontend_web/astro/src/Pages/AboutPage/AboutPage.module.css
+++ b/frontend_web/astro/src/Pages/AboutPage/AboutPage.module.css
@@ -1,4 +1,3 @@
-
 .AboutPage {
     text-align: center;
     background: linear-gradient(150deg, #600f58, #16213e, #600f58);
@@ -53,13 +52,14 @@
 }
 
 .creatorContainer {
-    display: flex;
     width: 80%;
     max-width: 800px;
-    background: #ffffff1c;
+    background: rgba(255, 255, 255, 0.1);
     padding: 20px;
     border-radius: 50px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    display: flex;
     align-items: center;
     gap: 20px;
 }
