--- a/frontend_web/astro/src/Pages/HomePage/HomePage.module.css
+++ b/frontend_web/astro/src/Pages/HomePage/HomePage.module.css
@@ -212,7 +212,8 @@ body {
     font-weight: 500;
     text-align: center;
     color: white;
-    background-image: linear-gradient(to right, #8b5cf6, #ec4899);
+    /* background-image: linear-gradient(to right, #ff0000, #ec4899); */
+    background-color: #10b981;
     border: none;
     border-radius: 6px;
     cursor: pointer;
